fixed sysAcc with testData

--- a/src/main/webapp/dashboard.xhtml
+++ b/src/main/webapp/dashboard.xhtml
@@ -45,6 +45,17 @@ Environmental damage caused by the use must be kept as small as possible.
             </tr>
         </p:panel>
 
+        <p:panel header="Test Admin" rendered="#{notLoggedIn}">
+            <tr>
+                <td>ID:</td>
+                <td>2</td>
+            </tr>
+            <tr>
+                <td>password:</td>
+                <td>123</td>
+            </tr>
+        </p:panel>
+
         <p:panel header="Die wunderbare Welt des Tauschens" rendered="#{notLoggedIn}">
             <p>Herzlich Willkommen beim Tauschring Hamburg</p>
 
