--- a/src/main/webapp/decorators/menuDecorator.xhtml
+++ b/src/main/webapp/decorators/menuDecorator.xhtml
@@ -32,6 +32,8 @@ Environmental damage caused by the use must be kept as small as possible.
             <div class="menuContainer">
 
                 <p:menu id="mainMenu">
+                    <p:menuitem styleClass="#{r:activeMenu('internal/admin/newMember')}" value="Meies Mitglied"
+                                url="/internal/admin/newMember.xhtml" icon="ui-icon-person" rendered="#{admin}"/>
 
                     <p:menuitem styleClass="#{r:activeMenu('internal/admin/adminTransaction')}" value="Überweisung"
                                 url="/internal/admin/adminTransaction.xhtml" icon="ui-icon-person" rendered="#{admin}"/>
