--- a/src/main/webapp/decorators/menuDecorator.xhtml
+++ b/src/main/webapp/decorators/menuDecorator.xhtml
@@ -81,6 +81,8 @@ Environmental damage caused by the use must be kept as small as possible.
                                 url="/internal/members/members.xhtml"
                                 icon="ui-icon-person" rendered="#{loggedIn}"/>
 
+                    <p:separator rendered="#{loggedIn}"/>
+
                     <p:menuitem styleClass="#{r:activeMenu('ring')}" value="Tauschring" url="/ring.xhtml"
                                 icon="ui-icon-refresh"/>
 
