--- a/src/main/webapp/internal/account.xhtml
+++ b/src/main/webapp/internal/account.xhtml
@@ -58,7 +58,8 @@ Environmental damage caused by the use must be kept as small as possible.
                         <f:facet name="header">
                             <h:outputText value="art"/>
                         </f:facet>
-                        <h:outputText value="#{depotItem.type.toString()}"/>
+                        <h:outputText value="#{depotItem.type.toString()}"
+                                      style="background-color: #{depotItem.type.color}"/>
                     </p:column>
                     <p:column id="subject" sortBy="#{depotItem.subject}">
                         <f:facet name="header">
