--- a/src/main/webapp/dashboard.xhtml
+++ b/src/main/webapp/dashboard.xhtml
@@ -37,7 +37,7 @@ Environmental damage caused by the use must be kept as small as possible.
         <p:panel header="Test Login" rendered="#{notLoggedIn}">
             <tr>
                 <td>ID:</td>
-                <td>1</td>
+                <td>11</td>
             </tr>
             <tr>
                 <td>password:</td>
@@ -109,7 +109,11 @@ Environmental damage caused by the use must be kept as small as possible.
                                 </td>
                                 <td><h:outputText value="#{event.dashboardDate}"/></td>
                                 <td style="text-align: center"><h:outputText value="#{event.period}"/></td>
-                                <td><h:outputText value="#{event.displayTitle}"/></td>
+                                <td>
+                                    <a href="${pageContext.request.servletPath}#{event.uri}">
+                                        <h:outputText value="#{event.displayTitle}"/>
+                                    </a>
+                                </td>
                             </tr>
                         </ui:repeat>
                     </table>
