single event selectable

--- a/src/main/webapp/dashboard.xhtml
+++ b/src/main/webapp/dashboard.xhtml
@@ -117,7 +117,7 @@ Environmental damage caused by the use must be kept as small as possible.
                             </tr>
                         </ui:repeat>
                     </table>
-                    <a href="${pageContext.request.servletPath}/internal/events/browse.xhtml">Details und weitere Termine.</a>
+                    <a href="${pageContext.request.servletPath}/internal/events/browse.xhtml?event">Details und weitere Termine.</a>
                 </div>
             </p:panel>
 
