--- a/src/main/webapp/decorators/decorator.xhtml
+++ b/src/main/webapp/decorators/decorator.xhtml
@@ -81,7 +81,7 @@
                         <p:menuitem value="Einstellungen"
                                     url="/internal/members/user.xhtml?userId=#{userSession.user.id}"
                                     icon="ui-icon-wrench"/>
-                        <p:menuitem value="Meine Anzeigen" url="/internal/advertisements/myAdvertisements.xhtml"
+                        <p:menuitem value="Meine Inserate" url="/internal/advertisements/myAdvertisements.xhtml"
                                     icon="ui-icon-star"/>
                         <p:menuitem value="Überweisung"
                                     url="/internal/transaction.xhtml?clear=clear" icon="ui-icon-arrowthick-1-e"/>
