--- a/src/main/webapp/internal/advertisements/myAdvertisements.xhtml
+++ b/src/main/webapp/internal/advertisements/myAdvertisements.xhtml
@@ -28,7 +28,7 @@ Environmental damage caused by the use must be kept as small as possible.
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:h="http://java.sun.com/jsf/html">
     <ui:define name="contentWithMenu">
-        <p:panel header="Meine Anzeigen">
+        <p:panel header="Meine Inserate">
             <p>
                 <p:splitButton value="Alle Auswählen" actionListener="#{userSession.save}" icon="ui-icon-circle-check">
                     <p:menuitem value="Keine Auswählen" url="#"
