--- a/src/main/webapp/internal/members/user.xhtml
+++ b/src/main/webapp/internal/members/user.xhtml
@@ -226,7 +226,7 @@ Environmental damage caused by the use must be kept as small as possible.
     </h:form>
 </p:panel>
 
-<p:panel header="Anzeigen"
+<p:panel header="Inserate"
          rendered="#{userModel.otherAndNotAsAdmin and not empty userModel.selectedUser.advertisements}">
     <p:dataTable id="advertisementTable" var="advertisement" value="#{userModel.selectedUser.advertisements}"
                  styleClass="ui-corner-all">
